--- a/kawn_subscriptions_manager/templates/clients/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_client.html
@@ -30,6 +30,50 @@
                                 aria-hidden="true">&times;</span></button>
                     </div>
                     {% endfor %}
+                    <div class="col-lg-12 mb-4 mt-2">
+                        <div class="align-middle">
+                            <h5 class="font-weight-bolder">Clients</h5>
+                            <a href="{% url 'clients:add_client' %}" class="btn bg-gradient-info mt-2">Add Client</a>
+                            <button type="button" class="btn bg-gradient-dark align-middle col-md-2 mt-2" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Advanced Search
+                            </button>
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Advanced Search</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="col-lg-12">
+                                                <form method="get">
+                                                    <div class="row">
+                                                        <div>
+                                                            {{ myFilter.form.name|as_crispy_field }}
+                                                        </div>
+                                                        <div>
+                                                            {{ myFilter.form.address|as_crispy_field }}
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button class="btn bg-secondary">
+                                                                <a href="{% url 'clients:list_client' %}" class="text-white">
+                                                                    Clear Filter
+                                                                </a>
+                                                            </button>
+                                                            <button class="btn bg-gradient-info" type="submit">Filter</button>
+                                                        </div>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    {% comment %}
                     <div class="align-middle">
                         <h5 class="font-weight-bolder">Clients</h5>
                         <a href="{% url 'clients:add_client' %}" class="btn bg-gradient-info mt-2">Add Client</a>
@@ -54,12 +98,13 @@
                             </div>
                         </form>
                     </div>
+                    {% endcomment %}
+                    
                 </div>
             </div>
-            <div class="card-body px-0 pt-0 pb-2">
-        
+            <div class="card-body">
                 <div class="table-responsive p-0">
-                    <table class="table table-sm sortable align-items-center mb-0">
+                    <table class="table table-sm" id="table1">
                         <thead>
                             <tr>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Client Name</th>
@@ -124,14 +169,6 @@
                     </table>
                 </div>
             </div>
-            <div class="card-footer row">
-                <hr>
-                <span class="col-lg-6">{% bootstrap_paginate page_obj show_first_last="true" centered="true" range=1 %}</span>
-                <span class="col-lg-6 text-end text-sm">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                </span>
-                <hr>
-            </div>
         </div>
     </div>
 </div>
@@ -139,24 +176,24 @@
 
 {% block inline_javascript %}
 <script type="text/javascript">
-  $('.show_confirm').click(function (event) {
-    var form = $(this).closest("form");
-    var name = $(this).data("name");
-    event.preventDefault();
-    Swal.fire({
-      title: 'Are you sure?',
-      text: "You won't be able to revert this!",
-      icon: 'warning',
-      showCancelButton: true,
-      confirmButtonColor: '#3085d6',
-      cancelButtonColor: '#d33',
-      confirmButtonText: 'Yes, delete it!'
-    })
-      .then((willDelete) => {
-        if (willDelete.isConfirmed) {
-          form.submit();
-        }
-      });
-  });
+    $('.show_confirm').click(function (event) {
+        var form = $(this).closest("form");
+        var name = $(this).data("name");
+        event.preventDefault();
+        Swal.fire({
+        title: 'Are you sure?',
+        text: "You won't be able to revert this!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!'
+        })
+        .then((willDelete) => {
+            if (willDelete.isConfirmed) {
+            form.submit();
+            }
+        });
+    });
 </script>
 {% endblock inline_javascript %}
