--- a/kawn_subscriptions_manager/templates/subscriptions/form_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/form_subscription.html
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="d-flex flex-column h-100">
-              <h5 class="font-weight-bolder">Form Client Subscription</h5>
+              <h5 class="font-weight-bolder">Form Subscription</h5>
               <form method="post" novalidate>
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
@@ -51,5 +51,20 @@
 </script>
 
 {% block inline_javascript %}
-<script></script>
+<script type="text/javascript">
+  let data = JSON.parse("{{subscriptionplan|escapejs}}");
+
+  if(document.getElementById("id_subscription_form-subscriptionplan")){
+    document.getElementById("id_subscription_form-subscriptionplan").onchange = (e) => {
+        let subscriptionplan = data.find(dataSubplan => dataSubplan.id == e.target.value);
+        $('#id_billing_form-price').val(subscriptionplan.price)
+    };
+  } else {
+    document.getElementById("id_activate_subscription_form-subscriptionplan").onchange = (e) => {
+        let subscriptionplan = data.find(dataSubplan => dataSubplan.id == e.target.value);
+        $('#id_billing_form-price').val(subscriptionplan.price)
+    };
+  }
+
+</script>
 {% endblock inline_javascript %}
