--- a/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
@@ -122,7 +122,7 @@
                     <a href="{% url 'subscriptions:sales_deactivate_subscription' data.id %}"
                       class="btn btn-sm bg-danger text-white text-xs">Deactivate</a>
                     {% elif data.active == False and data.is_approved is not None %}
-                    <a href="{% url 'subscriptions:sales_activate_subscription' data.id %}" class="btn btn-sm bg-info text-white text-xs">Activate</a>
+                    <a href="{% url 'subscriptions:activate_subscription' data.id %}" class="btn btn-sm bg-info text-white text-xs">Activate</a>
                     {% else %}
                     <p class="text-xs font-weight-bolder mb-0 text-center">Waiting for Approval</p>
                     {% endif %}
