--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
@@ -10,7 +10,7 @@
 
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb">{{  }}
         <li class="breadcrumb-item"><a href="/">Home</a></li>
         <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription Plans</a></li>
     </ol>
@@ -117,7 +117,7 @@
                 <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Recurrence Period</th>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder">Recurrence Unit</th>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder">Status</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-center">Action</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 15%;">Action</th>
               </tr>
             </thead>
             <tbody>
@@ -165,7 +165,7 @@
                     action="{% url 'subscriptions:delete_subscription_plan' data.id %}" method="post">
                     {% csrf_token %}
                     </a>
-                    <button type="submit" class="btn btn-sm bg-danger show_confirm text-white mt-1" data-toggle="tooltip"
+                    <button type="submit" class="btn btn-sm bg-danger show_confirm text-white text-xs" data-toggle="tooltip"
                       title='Delete'>Delete</button>
                   </form>
                   {% endif %}
