Update Billing for Subscription

--- a/kawn_subscriptions_manager/templates/subscriptions/detail_approval.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/detail_approval.html
@@ -30,7 +30,7 @@
                     </div>
                     {% endfor %}
                     <div class="align-middle">
-                        <h5 class="font-weight-bolder">{{ name.name }}'s Detail</h5>
+                        <h5 class="font-weight-bolder">{{ name.outlet.name }}'s Detail</h5>
                     </div>
                 </div>
             </div>
